--- a/src/components/formAt1/formAt1.module.css
+++ b/src/components/formAt1/formAt1.module.css
@@ -1,9 +1,15 @@
 .campo{
     margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
 }
 .campoBotao{
     margin-top: 20px;
+    display: flex;
+    justify-content: center;
 }
 .head{
     font-size: 30px;
+    display: flex;
+    justify-content: center;
 }
